Agrego titulo y autores

--- a/presentacion.tex
+++ b/presentacion.tex
@@ -11,8 +11,8 @@
 %\usetheme{AnnArbor}
 %\usetheme{Darmstadt}
 %\usetheme{Frankfurt}
-%\usetheme{Madrid}%azulito-li;la
-\usetheme{Warsaw}%int
+\usetheme{Madrid}%azulito-li;la
+%\usetheme{Warsaw}%int
 %\usetheme{Antibes}
 %\usetheme{CambridgeUS}%rojo-gris
 %\usetheme{Malmoe}
@@ -28,10 +28,10 @@
 \hyphenation{}
 
 \begin{document}
-\title{Restauración automática de acentos ortográficos en adverbios interrogativos}   
-\author[S. Iturriaga \and D. Garat \and G. Moncecchi]{Santiago Iturriaga \and Diego Garat \and Guillermo Moncecchi} 
-\institute{Facultad de Ingenier\'ia,\\
-Universidad de la Rep\'ublica,\\
+\title{Optimización de viajes compartidos en taxis utilizando algoritmos evolutivos}
+\author[Gabriel Fagúndez de los Reyes \and Renzo Massobrio]{Gabriel Fagúndez de los Reyes \and Renzo Massobrio} 
+\institute{Facultad de Ingeniería,\\
+Universidad de la República,\\
 Montevideo, Uruguay}
 
 \pgfdeclareimage[height=1.7cm]{university-logo}{logo}
