--- a/presentacion.tex
+++ b/presentacion.tex
@@ -74,17 +74,18 @@ Montevideo, Uruguay}
 \setbeamercovered{transparent}
 
 
-% ==============================================================
+
 \section{Introducción}
 
 %Indice con la sección actual
 \frame{\tableofcontents[currentsection]}
 
-\frame{\frametitle{Motivación} 
+% Slide 1 ==============================================================
+\frame{
+	\frametitle{Motivación} 
 	\begin{block}{Car pooling}
 	\begin{itemize}
-	\item Beneficios en el plano ecológico y económico, %a niveles 
-	individuales y colectivos.
+	\item Beneficios en el plano ecológico y económico, individuales y colectivos.
 	\item Diferentes iniciativas para atender el interés del público: carriles exclusivos, campañas para compartir los viajes al trabajo y aplicaciones para encontrar compañeros de viaje.
 	\end{itemize}
 	\end{block}
@@ -103,9 +104,10 @@ del tráfico y en la contaminación de las ciudades.
 }
 
 
-% ==============================================================
+% Slide 2 ==============================================================
 \section{Definición del problema} 
-\frame{\frametitle{Descripción del problema}
+\frame{
+	\frametitle{Descripción del problema}
 	\begin{block}{Realidad estudiada}
 Un grupo de personas ubicadas en un \textbf{mismo lugar de origen}, desean viajar hacia \textbf{diferentes destinos} utilizando taxis de forma compartida.
 
@@ -115,13 +117,11 @@ Se busca determinar la cantidad de taxis, la asignación de pasajeros y las ruta
 	\begin{block}{Consideraciones}
 	\begin{itemize}
 	\item Cada taxi puede trasladar a un número limitado de pasajeros.\pause
-	\item el número máximo de taxis para $N$ pasajeros es $N$, en el caso particular de que cada pasajero viaje en un vehículo separado.\pause
+	\item El número máximo de taxis para $N$ pasajeros es $N$, en el caso particular de que cada pasajero viaje en un vehículo separado.\pause
 	\item El costo de un taxi está dado por la suma del \textbf{costo inicial} (“bajada de bandera”) más el \textbf{costo determinado por la distancia} recorrida desde el origen hasta el destino final, pasando por cada uno de los destinos intermedios.\pause
 	\item No se consideran otros posibles costos (e.g. esperas, propinas, peajes).
 	\end{itemize}		
 	\end{block}
-	
-	
 }						
-% ==============================================================
+
 \end{document}
