--- a/presentacion.tex
+++ b/presentacion.tex
@@ -62,43 +62,38 @@ Montevideo, Uruguay}
 
 \pgfdeclareimage[height=1.7cm]{university-logo}{logo}
 \titlegraphic{\pgfuseimage{university-logo}}
-
-%\date{\today} 
-%\date{XII Simposio Argentino en Inteligencia Artificial}
 \date{}
 
 \frame{\frametitle{}\titlepage} 
 \frame{\frametitle{Contenido}\tableofcontents} 
 
-%Pausas transparentes
+% Pausas transparentes
 \setbeamercovered{transparent}
-
-
 
 \section{Introducción}
 
-%Indice con la sección actual
+% Indice con la sección actual
 \frame{\tableofcontents[currentsection]}
+
 
 % Slide 1 ==============================================================
 \frame{
 	\frametitle{Motivación} 
 	\begin{block}{Car pooling}
-	\begin{itemize}
-	\item Beneficios en el plano ecológico y económico, individuales y colectivos.
-	\item Diferentes iniciativas para atender el interés del público: carriles exclusivos, campañas para compartir los viajes al trabajo y aplicaciones para encontrar compañeros de viaje.
-	\end{itemize}
+		\begin{itemize}
+			\item Beneficios en el plano ecológico y económico, individuales y colectivos.
+			\item Diferentes iniciativas para atender el interés del público: carriles exclusivos, campañas para compartir los viajes al trabajo y aplicaciones para encontrar compañeros de viaje.
+		\end{itemize}
 	\end{block}
 	
 	\pause %Pausa entre bloques
 	
 	\begin{block}{Taxi pooling}
-	\begin{itemize}
-		\item Los taxis son un medio de transporte rápido y confiable, especialmente en ciudades donde el transporte público es poco eficiente.
-		\item Los taxis raramente viajan a capacidad completa, impactando en la congestión
-del tráfico y en la contaminación de las ciudades.
-		\item Tarifas altas desalientan a los usuarios.
-		\item \alert{15\%} de los accidentes fatales en Uruguay involucran a un conductor alcoholizado (UNASEV).
+		\begin{itemize}
+			\item Los taxis son un medio de transporte rápido y confiable, especialmente en ciudades donde el transporte público es poco eficiente.
+			\item Los taxis raramente viajan a capacidad completa, impactando en la congestión del tráfico y en la contaminación de las ciudades.
+			\item Tarifas altas desalientan a los usuarios.
+			\item \alert{15\%} de los accidentes fatales en Uruguay involucran a un conductor alcoholizado (UNASEV).
 	\end{itemize}
 	\end{block}
 }
@@ -115,13 +110,44 @@ Se busca determinar la cantidad de taxis, la asignación de pasajeros y las ruta
 	\end{block}
 \pause
 	\begin{block}{Consideraciones}
-	\begin{itemize}
-	\item Cada taxi puede trasladar a un número limitado de pasajeros.\pause
-	\item El número máximo de taxis para $N$ pasajeros es $N$, en el caso particular de que cada pasajero viaje en un vehículo separado.\pause
-	\item El costo de un taxi está dado por la suma del \textbf{costo inicial} (“bajada de bandera”) más el \textbf{costo determinado por la distancia} recorrida desde el origen hasta el destino final, pasando por cada uno de los destinos intermedios.\pause
-	\item No se consideran otros posibles costos (e.g. esperas, propinas, peajes).
-	\end{itemize}		
+		\begin{itemize}
+			\item Cada taxi puede trasladar a un número limitado de pasajeros.\pause
+			\item El número máximo de taxis para $N$ pasajeros es $N$, en el caso particular de que cada pasajero viaje en un vehículo separado.\pause
+			\item El costo de un taxi está dado por la suma del \textbf{costo inicial} (“bajada de bandera”) más el \textbf{costo determinado por la distancia} recorrida desde el origen hasta el destino final, pasando por cada uno de los destinos intermedios.\pause
+			\item No se consideran otros posibles costos (e.g. esperas, propinas, peajes).
+		\end{itemize}		
 	\end{block}
-}						
+}	
+
+
+% Slide 3 ==============================================================					
+\frame{
+	\frametitle{Descripción del problema}
+	\begin{block}{Formulación matemática}
+		Dados:
+		\begin{itemize}
+			\item $P = \{p_1,p_2,\ldots,p_N\}$ conjunto de pasajeros que parten de $O$ y se trasladan a $D = \{d_1,d_2,\ldots,d_N\}$. \pause
+			\item Una función $dest: P \rightarrow D$ que establece el destino de cada uno de los pasajeros.\pause
+			\item Un conjunto de taxis $T = \{t_1,t_2,\ldots,t_M\}$; con $M \leq N$; y una función $C:T\rightarrow\{0,1,\ldots,C_{MAX}\}$ que indica la cantidad de pasajeros que viajan cada taxi. $C_{MAX}$ es la capacidad máxima permitida en un mismo taxi.\pause
+			\item una constante $B$ que indica el costo inicial del taxi.\pause
+			\item una función de distancia, $dist: \lbrace \lbrace O \rbrace \cup D \rbrace \times D \rightarrow \mathbb{R}^+_0$.\pause
+			\item una función de costo $cost: \mathbb{R}^+_0 \rightarrow \mathbb{R}^+_0$.
+		\end{itemize}
+	\end{block}
+}	
+
+
+% Slide 4 ==============================================================					
+\frame{
+	\frametitle{Descripción del problema}
+	\begin{block}{Formulación matemática}
+		El problema consiste en hallar una planificación, es decir una función $f:P \rightarrow T \times \lbrace 1, \ldots,C_{MAX} \rbrace$ para transportar los $N$ pasajeros en $K$ taxis ($K \leq N$) que determine la asignación de pasajeros a taxis y el orden en que serán trasladados a los respectivos destinos, minimizando la función de costo total ($CT$) de la asignación, dada en la Ecuación~\ref{Eq:total_cost_mono}, donde $f^{-1}(t_i,j)$ indica el pasajero asignado a la posición $j$ (orden de traslado) en el taxi $t_{i}$ y $dest\big(f^{-1}(t_{i},0)\big)=O ,\;  \forall \: t_{i}$.
+
+		\begin{equation}
+			\label{Eq:total_cost_mono}
+			CT  =  \sum\limits_{t_{i}, C(t_{i})\neq0} \Bigg[B+\sum\limits_{j=1}^{C(t_{i})}cost\bigg(dist \underbrace{\Big(dest\big(f^{-1}(t_{i},j-1)\big),des	\big(f^{-1}(t_{i},j)\big)\Big)}_{\text{destinos consecutivos en el recorrido del taxi } t_i}\bigg)\Bigg]
+		\end{equation}
+	\end{block}
+}
 
 \end{document}
