Cambios menores y agrego indice en Definición del Problema

--- a/presentacion.tex
+++ b/presentacion.tex
@@ -70,13 +70,11 @@ Montevideo, Uruguay}
 % Pausas transparentes
 \setbeamercovered{transparent}
 
-\section{Introducción}
+% Slide 1 ==============================================================
 
-% Indice con la sección actual
+\section{Introducción}
 \frame{\tableofcontents[currentsection]}
 
-
-% Slide 1 ==============================================================
 \frame{
 	\frametitle{Motivación} 
 	\begin{block}{Car pooling}
@@ -100,7 +98,10 @@ Montevideo, Uruguay}
 
 
 % Slide 2 ==============================================================
+
 \section{Definición del problema} 
+\frame{\tableofcontents[currentsection]}
+
 \frame{
 	\frametitle{Descripción del problema}
 	\begin{block}{Realidad estudiada}
